<resources>
    <string name="app_name">20110568 - Nguyễn Hữu Thắng</string>
    <string name="login">log in</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="pass">Password:</string>
    <string name="email_edit">Email</string>
    <string name="phone_edit">Phone</string>
    <string name="pass_edit">Password</string>
    <string name="student">20110568-Nguyễn Hữu Thắng</string>
    <string name="user">Username</string>
    <string name="user_view">Username: </string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="names">Name</string>
    <string name="address">Address</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="placeholder">ImageView</string>
    <string name="upload">Upload</string>
    <string name="discard">Discard</string>
    <string name="camera">Camera: </string>
    <string name="input_a">Input A: </string>
    <string name="input_b">Input B: </string>
    <string name="calculate">Calculate</string>
    <string name="kq">Result: </string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>