<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login">

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/names"
        android:background="@color/linear"
        android:fontFamily="@font/merriweather_regular"
        android:inputType="text"
        android:autofillHints=""
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:background="@color/linear"
        android:fontFamily="@font/merriweather_regular"
        android:inputType="text"
        android:autofillHints=""
        android:gravity="center"
        android:padding="10dp"
        android:layout_toEndOf="@+id/name"
        />

    <EditText
        android:id="@+id/subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:background="@color/linear"
        android:fontFamily="@font/merriweather_regular"
        android:inputType="text"
        android:autofillHints=""
        android:gravity="start"
        android:padding="10dp"
        android:layout_below="@+id/name"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/message"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:hint="@string/message"
        android:background="@color/linear"
        android:fontFamily="@font/merriweather_regular"
        android:inputType="text"
        android:autofillHints=""
        android:gravity="start"
        android:padding="10dp"
        android:layout_below="@+id/subject"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_weight="3"
        android:id="@+id/submit"
        android:fontFamily="@font/merriweather_bold"
        android:layout_below="@+id/message"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/purple_200"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>